# ScientificComputingCourse

./: Barrier.cc  Barrier.hh
MPI-IO/: CMakeLists.txt  mpiio-read.cc  mpiio-write.cc
Threading/: Barrier.cc  Barrier.hh  WorkQueue.cc
array2d/: .clang-format  CMakeLists.txt  README.md
array2d/include/fsl/: array1d.hh  array2d.hh
array2d/test/: CMakeLists.txt  array1d.cc  array2d.cc
cmake-eigen/: CMakeLists.txt  eigen-demo.cc
